fix height overlaping issuue

--- a/css/shahpar-challenge-style.scss
+++ b/css/shahpar-challenge-style.scss
@@ -1,6 +1,3 @@
-.my-row-wrapper {
- 
-}
 
 body {
     background-color: rgb(199, 196, 196);
@@ -8,11 +5,13 @@ body {
 
 .my-row {
     box-sizing: border-box;
-  p {
-  }
 
-  div {
-    // height: 170px;
-    background-color: rgb(236, 160, 236);
+  .row {
+
+    div {
+      height: 170px;
+      background-color: rgb(236, 160, 236);
+    }
+    
   }
 }
